--- a/pages/Fight.html
+++ b/pages/Fight.html
@@ -49,10 +49,10 @@ function typeWriter() {
     <img src="https://i.ytimg.com/vi/yvekA_4TOg4/maxresdefault.jpg">
     <p>*silence*</p><br>
     <p>You: "Wait a minute... this horse is totally poo-brained. We can't hurt him."</p><br>
-    <p> Jake: "Well I'm tired and don't wanna be here anymore. Let's hurry up and get rid of him already."</p><br>
+    <p> Jake: "Well I'm tired and don't wanna be here anymore. And I have the perfect idea to get this over and done with..."</p><br>
 
-    <a href="Lure.html"> Gentely lure him away.</a><br><br>
-    <a href="Move.html">Pick him up.</a>
+    <a href="Lure.html">Let Jake do his secret plan.</a><br><br>
+    <a href="Move.html">Pick him up together.</a>
 
 
 </body>
