--- a/pages/Finale1.html
+++ b/pages/Finale1.html
@@ -8,9 +8,9 @@
     <link rel="stylesheet" type="text/css" href="../styles.css";>
 
     <style> 
-    body{ background-color: rgb(10, 54, 24);
+    body{ background-color: rgb(22, 75, 39);
         border-color:antiquewhite;
-        color:rgb(0, 0, 0);
+        color:rgb(253, 253, 253);
         text-align: center;
         font-size: 1.5em;
         font-family: Verdana, Geneva, Tahoma, sans-serif;
@@ -25,8 +25,8 @@
 h3{
         border-style: solid;
         border-width: 100px;
-        margin-top: -10%;
-        border-color: rgb(0, 0, 0);
+        margin-top: -15%;
+        border-color: rgba(0, 0, 0, 0.774);
     }
 
         </style>
@@ -34,8 +34,8 @@ h3{
 
 <body>
     <h2>The End...</h2> 
-    <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fstatic.onecms.io%2Fwp-content%2Fuploads%2Fsites%2F6%2F2018%2F09%2F11-enchiridion-e28094-season-1-episode-5-2000.jpg">
-    <p>Oh no... You and your best friend are fighting. The horse is tearing you apart. Looks like you guys won't be getting any sleep tonight...</p><br>
+    <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fstatic.onecms.io%2Fwp-content%2Fuploads%2Fsites%2F6%2F2018%2F09%2F11-enchiridion-e28094-season-1-episode-5-2000.jpg"><br><br>
+    <p>Oh no... You and your best friend are fighting. The horse is tearing you guys apart. Looks like you guys won't be getting any sleep tonight...</p><br>
     
     <a href="../index.html">End Game :( </a><br><br>
     <h3></h3>
